ostad-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ostad-ui
  namespace: aumit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ostad-ui
  template:
    metadata:
      labels:
        app: ostad-ui
    spec:
      containers:
        - name: ostad-ui
          image: aumit373/ostad-ui:latest
          ports: 
            - containerPort: 5173
