ostad-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ostad-server
  namespace: ostad
spec:
  selector:
    app: ostad-server
  ports:
    - port: 5050
      targetPort: 5050
