ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ostad-ingress
  namespace: aumit
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: ostad.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service: 
                name: ostad-server
                port:
                  number: 5173
          - path: /mongo
            pathType: Prefix
            backend:
              service: 
                name: mongo-express
                port:
                  number: 8081
